* added a concrete GenericStoredProcedure class to make it possible to configure using application context (SPR-3987 backport)

Package org.springframework.jms
* fixed JmsUtils.buildExceptionMessage to avoid potential NPE (SPR-5275)
* fixed JmsException/JmsUtils to fully avoid NPEs in case of cause messages being null
* fixed MessageListenerAdapter's "getSubscriptionName()" to work without delegate as well (SPR-5309 backport)

Package org.springframework.orm
* AnnotationSessionFactoryBean now properly scans subpackages as well (SPR-5324)

Package org.springframework.remoting
* fixed HTTP invoker to support resolution of multi-level primitive array classes again (SPR-5473 backport)

Package org.springframework.transaction
* WebSphereUowTransactionManager preserves original exception in case of rollback (SPR-5270 backport)


Changes in version 2.5.6.SEC01 (2009-04-22)
-------------------------------------

Package org.springframework.aop
* changed serialization behavior of AbstractRegexpMethodPointcut and JdkRegexpMethodPointcut to avoid recompilation

Package org.springframework.core
* fixed issue with GenericTypeResolver where garbage collection was prevented under certain circumstances


Changes in version 2.5.6 (2008-10-31)
-------------------------------------

General
* removed outdated EAR support from sample applications
* upgraded to AspectJ 1.6.2 (retaining compatibility with AspectJ 1.5.x and 1.6.x)
* upgraded to EHCache 1.5.0 (retaining compatibility with EHCache 1.2 and higher)
* upgraded to TestNG 5.8 (retaining compatibility with TestNG 5.5 and higher)
* upgraded to OpenJPA 1.1.0 (retaining compatibility with OpenJPA 1.0.x as well as 1.2.0)
* upgraded to EclipseLink 1.0.1 (EclipseLinkJpaVendorAdapter requires EclipseLink 1.0.0+ now)

Package org.springframework.aop
* AbstractAutoProxyCreator (as used by "aop:config") correctly ignores null bean instances