@@ -511,9 +511,11 @@ public class SingleConnectionFactory
 			}
 			else if (method.getName().equals("start")) {
 				// Handle start method: track started state.
-				this.target.start();
 				synchronized (connectionMonitor) {
-					started = true;
+					if (!started) {
+						this.target.start();
+						started = true;
+					}
 				}
 				return null;
 			}
